// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterInput /> should render a filter input 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className="col-sm-1 control-label"
      htmlFor="filter-descriptors"
    >
      Filter
    </label>
    <div
      className="col-sm-4"
    >
      <input
        className="form-control"
        id="filter-descriptors"
        label="Filter"
        onChange={[Function]}
        placeholder=""
        type="text"
        value=""
      />
      
    </div>
  </div>
</form>
`;

exports[`<FilterInput /> should render a filter input with custom label 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="filter-descriptors"
    >
      Search
    </label>
    <div
      className="col-xs-1"
    >
      <input
        className="form-control"
        id="filter-descriptors"
        label="Search"
        onChange={[Function]}
        placeholder=""
        type="text"
        value=""
      />
      
    </div>
  </div>
</form>
`;
